# GeneticAlgoPrez

./: .gitignore  GeneticAlgoHandsOn.ipynb  README.md  constants.py  main.py  my_types.py  plot_utils.py  pyproject.toml  requirements.txt
datasets/: metro-france.csv
java/: pom.xml
java/src/main/java/: CoffeeParameters.java  CoffeeScorer.java  Main.java
java/src/main/java/com/ekinox/geneticalgo/: CoffeeParameters.java  CoffeeScorer.java  Main.java
java/src/test/java/: MainTest.java
python/: coffee_parameters.py  constants.py  evaluate.py  main.py  pyproject.toml  test_evaluate.py  test_main.py
typescript/: coffee-parameters.ts  coffee-scorer.ts  index.spec.ts  index.ts  package-lock.json  package.json  tsconfig.json
