[tool.poetry]
name = "geneticalgopres"
version = "0.1.0"
description = ""
authors = ["tom <ttaranto@ekinox.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
matplotlib = "^3.8.1"
numba = "^0.58.1"
tqdm = "^4.66.1"
pandas = "^2.1.3"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
