[tool.poetry]
name = "GeneticCoffee"
version = "0.1.0"
description = ""
authors = ["tom <ttaranto@ekinox.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.6.3"
numpy = "^1.26.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
